loro/test/valid/clases/forward.loro
clase A
	descripción ""
	b: B : "referencia a B de abajo";
fin clase

clase B
	descripción ""
//	a: A : "referencia a A de arriba";
fin clase
