loro/test/invalid/ciclicidad.loro
/*
	Inválido:
	Ciclicidad en definición
*/
///////////////////////////////////////////////////////////////
clase A  extiende A
	descripción "clase A"
fin clase

